added navbar section with html css and mobile responsive style

--- a/kids-education.html
+++ b/kids-education.html
@@ -8,7 +8,36 @@
 </head>
 <body>
     <header>
+        <!-- Navbar Section -->
+        <nav class="navbar">
+            <div class="nav-logo">
+                <img src="assets/logo.png" alt="">
+                <h1>SCHOOL</h1>
+            </div>
+            <ul>
+                <li><a class="color-1" href="">Home</a></li>
+                <li><a class="color-2" href="">About</a></li>
+                <li><a class="color-3" href="">Facilities</a></li>
+                <li><a class="color-4" href="">Admission</a></li>
+            </ul>
+           <div>
+             <button class="btn-primary">Contact</button>
+           </div>
+           <!-- Hamburger Menu Icon -->
+        </nav>
 
+        <!-- Banner Section -->
+         <div class="banner-container">
+            <div class="banner-text">
+            <h1> <span class="color-1 ">Empowering</span> <br>students from small <br>
+                age <span class="color-2"> towards vision</span></h1>
+            <p class="primary-color">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+            <button>Enroll Now</button>
+        </div>
+         <div class="banner">
+            <img src="assets/hero-kids.png" alt="">
+         </div>
+         </div>
     </header>
     
     <main>
