--- a/kids-education.html
+++ b/kids-education.html
@@ -28,7 +28,7 @@
 
       <!-- Banner Section -->
       <div class="banner">
-        <div class="banner-text">
+        <div class="banner-description">
           <h1>
             <span class="color-1">Empowering</span> <br />students from small
             <br />
@@ -46,7 +46,51 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <!-- Standard Curriculum Section -->
+      <section class="curriculum-section">
+        <div>
+          <h1>Standard Curriculum</h1>
+          <div class="card-container">
+            <!-- .card*3>img+h2+p+button -->
+            <div class="cards card-1">
+              <img src="assets/kinder.png" alt="" />
+              <h2>Kinder (3-6) Years</h2>
+              <p>
+                Cum sociis natoque penatibus et magnis dis parturient montes,
+                nascetur ridiculus mu sdis parturient
+              </p>
+
+              <button class="card-btn color-3">Read More</button>
+            </div>
+            <div class="cards card-2">
+              <img src="assets/elementary.png" alt="" />
+              <h2>Elementary School</h2>
+              <p>
+                Cum sociis natoque penatibus et magnis dis parturient montes,
+                nascetur ridiculus mu sdis parturient
+              </p>
+              <button class="card-btn color-1">Read More</button>
+            </div>
+            <div class="cards card-3">
+              <img src="assets/middle.png" alt="" />
+              <h2>Middle (10-16) Years</h2>
+              <p>
+                Cum sociis natoque penatibus et magnis dis parturient montes,
+                nascetur ridiculus mu sdis parturient
+              </p>
+              <button class="card-btn color-5">Read More</button>
+            </div>
+          </div>
+          <!-- Arrow Button -->
+          <div>
+            <button class="btn-arrow"><</button>
+            <button class="btn-arrow">></button>
+          </div>
+        </div>
+      </section>
+      <!-- Our Story Section -->
+    </main>
 
     <footer></footer>
   </body>
