--- a/kids-education.html
+++ b/kids-education.html
@@ -89,6 +89,49 @@
           </div>
         </div>
       </section>
+      <!-- Our Stories Section -->
+      <section class="stories-section">
+        <div>
+          <h1>Our Stories</h1>
+          <div class="stories-container">
+            <div class="stories-part-1 stories-card">
+              <img src="assets/story-1.png" alt="" />
+              <button>November 19, 2019</button>
+              <h3>A fun toddler coloring training on classroom</h3>
+              <p>
+                Beautiful branding for changes by Never Now in Australia.
+                changes is a platform for open discussion in an inclusive and
+                collaborative environment, providing the...
+              </p>
+            </div>
+            <div class="stories-part-2">
+              <div class="stories-card">
+                <img src="assets/story-2.png" alt="" />
+                <button>November 19, 2019</button>
+                <h3>Find out if a school fits the family’s needs</h3>
+              </div>
+              <div class="stories-card">
+                <img src="assets/story-3.png" alt="" />
+                <button>November 19, 2019</button>
+                <h3>Find out if a school fits the family’s needs</h3>
+              </div>
+              <div class="stories-card">
+                <img src="assets/story-4.png" alt="" />
+                <button>November 19, 2019</button>
+                <h3>Find out if a school fits the family’s needs</h3>
+              </div>
+              <div class="stories-card">
+                <img src="assets/story-5.png" alt="" />
+                <button>November 19, 2019</button>
+                <h3>Find out if a school fits the family’s needs</h3>
+              </div>
+            </div>
+          </div>
+          <div>
+            <button class="btn-primary">View All</button>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
