--- a/kids-education.html
+++ b/kids-education.html
@@ -47,6 +47,14 @@
     </header>
 
     <main>
+      <!-- Marquee -->
+      <marquee behavior="scroll" direction="left" class="marquee">
+        <h1>
+          <span class="color-1">Welcome to our Kids Education platform</span> –
+          <span class="color-2"> Empowering young minds! </span>
+        </h1>
+      </marquee>
+
       <!-- Standard Curriculum Section -->
       <section class="curriculum-section">
         <div>
@@ -56,7 +64,7 @@
             <div class="cards card-1">
               <img src="assets/kinder.png" alt="" />
               <h2>Kinder (3-6) Years</h2>
-              <p>
+              <p class="primary-color">
                 Cum sociis natoque penatibus et magnis dis parturient montes,
                 nascetur ridiculus mu sdis parturient
               </p>
@@ -66,7 +74,7 @@
             <div class="cards card-2">
               <img src="assets/elementary.png" alt="" />
               <h2>Elementary School</h2>
-              <p>
+              <p class="primary-color">
                 Cum sociis natoque penatibus et magnis dis parturient montes,
                 nascetur ridiculus mu sdis parturient
               </p>
@@ -75,7 +83,7 @@
             <div class="cards card-3">
               <img src="assets/middle.png" alt="" />
               <h2>Middle (10-16) Years</h2>
-              <p>
+              <p class="primary-color">
                 Cum sociis natoque penatibus et magnis dis parturient montes,
                 nascetur ridiculus mu sdis parturient
               </p>
@@ -94,11 +102,11 @@
         <div>
           <h1>Our Stories</h1>
           <div class="stories-container">
-            <div class="stories-part-1 stories-card">
+            <div class="stories-card">
               <img src="assets/story-1.png" alt="" />
-              <button>November 19, 2019</button>
+              <button class="stories-button-1">November 19, 2019</button>
               <h3>A fun toddler coloring training on classroom</h3>
-              <p>
+              <p class="primary-color">
                 Beautiful branding for changes by Never Now in Australia.
                 changes is a platform for open discussion in an inclusive and
                 collaborative environment, providing the...
@@ -107,22 +115,22 @@
             <div class="stories-part-2">
               <div class="stories-card">
                 <img src="assets/story-2.png" alt="" />
-                <button>November 19, 2019</button>
+                <button class="button-color-1">November 19, 2019</button>
                 <h3>Find out if a school fits the family’s needs</h3>
               </div>
               <div class="stories-card">
                 <img src="assets/story-3.png" alt="" />
-                <button>November 19, 2019</button>
+                <button class="button-color-2">November 19, 2019</button>
                 <h3>Find out if a school fits the family’s needs</h3>
               </div>
               <div class="stories-card">
                 <img src="assets/story-4.png" alt="" />
-                <button>November 19, 2019</button>
+                <button class="button-color-1">November 19, 2019</button>
                 <h3>Find out if a school fits the family’s needs</h3>
               </div>
               <div class="stories-card">
                 <img src="assets/story-5.png" alt="" />
-                <button>November 19, 2019</button>
+                <button class="button-color-1">November 19, 2019</button>
                 <h3>Find out if a school fits the family’s needs</h3>
               </div>
             </div>
