--- a/kids-education.html
+++ b/kids-education.html
@@ -102,7 +102,7 @@
         <div>
           <h1>Our Stories</h1>
           <div class="stories-container">
-            <div class="stories-card">
+            <div class="stories-card stories-part-1">
               <img src="assets/story-1.png" alt="" />
               <button class="stories-button-1">November 19, 2019</button>
               <h3>A fun toddler coloring training on classroom</h3>
@@ -119,6 +119,16 @@
                 <h3>Find out if a school fits the family’s needs</h3>
               </div>
               <div class="stories-card">
+                <img src="assets/story-3.png" alt="" />
+                <button class="button-color-2">November 19, 2019</button>
+                <h3>Find out if a school fits the family’s needs</h3>
+              </div>
+              <div class="stories-card hide">
+                <img src="assets/story-3.png" alt="" />
+                <button class="button-color-2">November 19, 2019</button>
+                <h3>Find out if a school fits the family’s needs</h3>
+              </div>
+              <div class="stories-card hide">
                 <img src="assets/story-3.png" alt="" />
                 <button class="button-color-2">November 19, 2019</button>
                 <h3>Find out if a school fits the family’s needs</h3>
@@ -142,6 +152,53 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div>
+        <div>
+          <div>
+            <img src="/assets/logo 2.png" alt="" />
+            <h1>Kids Education</h1>
+          </div>
+          <p>
+            Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon
+            Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.
+          </p>
+        </div>
+        <div>
+          <h3>About School</h3>
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Facilities</a></li>
+            <li><a href="">Admission</a></li>
+          </ul>
+        </div>
+        <div>
+          <h3>Keep In Touch</h3>
+          <ul>
+            <li>
+              <a href="https://www.facebook.com" target="_blank">
+                <img src="/assets/fb.png" alt="Facebook" />
+              </a>
+            </li>
+            <li>
+              <a href="https://dibble.com" target="_blank">
+                <img src="/assets/dribble.png" alt="Dribble" />
+              </a>
+            </li>
+            <li>
+              <a href="https://www.twitter.com" target="_blank">
+                <img src="/assets/twitter.png" alt="Twitter" />
+              </a>
+            </li>
+            <li>
+              <a href="https://www.google+.com" target="_blank">
+                <img src="/assets/google+.png" alt="Google+" />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
