Added Footer section html and css file

--- a/kids-education.html
+++ b/kids-education.html
@@ -151,20 +151,25 @@
         </div>
       </section>
     </main>
-
+    <!-- Footer Section -->
     <footer>
-      <div>
+      <div class="footer-container">
         <div>
-          <div>
+          <div class="footer-logo">
             <img src="/assets/logo 2.png" alt="" />
-            <h1>Kids Education</h1>
+            <h1>
+              Kids <br />
+              Education
+            </h1>
           </div>
           <p>
-            Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon
-            Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.
+            Pizza ipsum dolor meat lovers buffalo. <br />
+            Deep dolor roll melted bacon Bianca pan <br />
+            bacon pineapple Aussie. Mayo rib sauce <br />
+            Hawaiian meatball.
           </p>
         </div>
-        <div>
+        <div class="footer-links">
           <h3>About School</h3>
           <ul>
             <li><a href="">Home</a></li>
@@ -175,7 +180,7 @@
         </div>
         <div>
           <h3>Keep In Touch</h3>
-          <ul>
+          <ul class="social-links">
             <li>
               <a href="https://www.facebook.com" target="_blank">
                 <img src="/assets/fb.png" alt="Facebook" />
