Added humburger menu

--- a/kids-education.html
+++ b/kids-education.html
@@ -23,7 +23,23 @@
         <div>
           <button class="navbar-btn">Contact</button>
         </div>
+
         <!-- Hamburger Menu Icon -->
+        <div class="hamburger-menu">
+          <input type="checkbox" id="menu-toggle" />
+          <label for="menu-toggle" class="menu-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+          <!-- Hidden Menu Links -->
+          <ul class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Facilities</a></li>
+            <li><a href="#">Admission</a></li>
+          </ul>
+        </div>
       </nav>
 
       <!-- Banner Section -->
