Added Footer all changes

--- a/index.html
+++ b/index.html
@@ -198,23 +198,23 @@
           <h3>Keep In Touch</h3>
           <ul class="social-links">
             <li>
-              <a href="https://www.facebook.com" target="_blank">
-                <img src="/assets/fb.png" alt="Facebook" />
+              <a href="" target="_blank">
+                <img src="/assets/fb.png" alt="" />
               </a>
             </li>
             <li>
-              <a href="https://dibble.com" target="_blank">
-                <img src="/assets/dribble.png" alt="Dribble" />
+              <a href="" target="_blank">
+                <img src="/assets/dribble.png" alt="" />
               </a>
             </li>
             <li>
-              <a href="https://www.twitter.com" target="_blank">
-                <img src="/assets/twitter.png" alt="Twitter" />
+              <a href="" target="_blank">
+                <img src="/assets/twitter.png" alt="" />
               </a>
             </li>
             <li>
-              <a href="https://www.google+.com" target="_blank">
-                <img src="/assets/google+.png" alt="Google+" />
+              <a href="" target="_blank">
+                <img src="/assets/google+.png" alt="" />
               </a>
             </li>
           </ul>
