Added All Final submit file

--- a/index.html
+++ b/index.html
@@ -197,25 +197,15 @@
         <div>
           <h3>Keep In Touch</h3>
           <ul class="social-links">
+            <li><img src="/assets/fb.png" alt="" /></li>
             <li>
-              <a href="" target="_blank">
-                <img src="/assets/fb.png" alt="" />
-              </a>
+              <img src="/assets/dribble.png" alt="" />
             </li>
             <li>
-              <a href="" target="_blank">
-                <img src="/assets/dribble.png" alt="" />
-              </a>
+              <img src="/assets/twitter.png" alt="" />
             </li>
             <li>
-              <a href="" target="_blank">
-                <img src="/assets/twitter.png" alt="" />
-              </a>
-            </li>
-            <li>
-              <a href="" target="_blank">
-                <img src="/assets/google+.png" alt="" />
-              </a>
+              <img src="/assets/google+.png" alt="" />
             </li>
           </ul>
         </div>
