--- a/index.html
+++ b/index.html
@@ -196,18 +196,20 @@
         </div>
         <div>
           <h3>Keep In Touch</h3>
-          <ul class="social-links">
-            <li><img src="/assets/fb.png" alt="" /></li>
-            <li>
-              <img src="/assets/dribble.png" alt="" />
-            </li>
-            <li>
-              <img src="/assets/twitter.png" alt="" />
-            </li>
-            <li>
-              <img src="/assets/google+.png" alt="" />
-            </li>
-          </ul>
+          <div class="social-links">
+            <a href="https://www.facebook.com" target="_blank">
+              <img src="/assets/fb.png" alt="Facebook" />
+            </a>
+            <a href="https://www.dribble.com" target="_blank">
+              <img src="/assets/dribble.png" alt="Dribble" />
+            </a>
+            <a href="https://www.twitter.com" target="_blank">
+              <img src="/assets/twitter.png" alt="Twitter" />
+            </a>
+            <a href="https://www.google+.com" target="_blank">
+              <img src="/assets/google+.png" alt="Google+" />
+            </a>
+          </div>
         </div>
       </div>
     </footer>
