Added footer social links changes

--- a/index.html
+++ b/index.html
@@ -198,16 +198,16 @@
           <h3>Keep In Touch</h3>
           <div class="social-links">
             <a href="https://www.facebook.com" target="_blank">
-              <img src="/assets/fb.png" alt="Facebook" />
+              <img src="./assets/fb.png" alt="Facebook" />
             </a>
             <a href="https://www.dribble.com" target="_blank">
-              <img src="/assets/dribble.png" alt="Dribble" />
+              <img src="./assets/dribble.png" alt="Dribble" />
             </a>
             <a href="https://www.twitter.com" target="_blank">
-              <img src="/assets/twitter.png" alt="Twitter" />
+              <img src="./assets/twitter.png" alt="Twitter" />
             </a>
             <a href="https://www.google+.com" target="_blank">
-              <img src="/assets/google+.png" alt="Google+" />
+              <img src="./assets/google+.png" alt="Google+" />
             </a>
           </div>
         </div>
